NLog done for create instance

--- a/InfrastructureLayer/InfrastructureLayer.csproj
+++ b/InfrastructureLayer/InfrastructureLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E6E72314-CCFC-432D-9B8F-51F3F77EE576}</ProjectGuid>
+    <ProjectGuid>{F4AEAE49-E44D-4BDC-82F7-69AB6BA98933}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GTLCore</RootNamespace>
-    <AssemblyName>GTLCore</AssemblyName>
+    <RootNamespace>InfrastructureLayer</RootNamespace>
+    <AssemblyName>InfrastructureLayer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,11 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.7.10\lib\net45\NLog.dll</HintPath>
     </Reference>
-    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
@@ -50,20 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityState.cs" />
-    <Compile Include="ILoanRepository.cs" />
-    <Compile Include="IMaterialRepository.cs" />
-    <Compile Include="IMemberRepository.cs" />
-    <Compile Include="IPersonRepository.cs" />
-    <Compile Include="Loan.cs" />
-    <Compile Include="Loan_part.cs" />
-    <Compile Include="Material.cs" />
-    <Compile Include="Member.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Common\ApplicationBase.cs" />
+    <Compile Include="Common\StaticLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
