--- a/GTLUnitTest/packages.config
+++ b/GTLUnitTest/packages.config
@@ -10,6 +10,7 @@
   <package id="Moq" version="4.16.1" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
+  <package id="NLog" version="4.7.10" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net472" />
   <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net472" />
