--- a/GTLUnitTest/app.config
+++ b/GTLUnitTest/app.config
@@ -3,20 +3,73 @@
 	<connectionStrings>
 		<add name="connectionString" connectionString="Data Source=DESKTOP-SLI2U44;Initial Catalog=GTL;User ID=sa;Password=rani1992" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.16.0.0" newVersion="4.16.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.16.0.0" newVersion="4.16.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+		<Window x:Class="GTL\GTLGeorgiaTechLibrary"
+		  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		  xmlns:local="clr-namespace:GTLGeorgiaTechLibrary"
+		  mc:Ignorable="d"
+		  Title="GTLGeorgiaTechLibrary" Height="450" Width="800">
+			<StackPanel x:Name="StackRoot">
+				<TextBox x:Name="txtLoanSsn" AutomationProperties.AutomationId="txtLoanSsn"/>
+				<TextBox x:Name="txtLoanmaterialId" AutomationProperties.AutomationId="txtLoanmaterialId"/>
+				<Button Click="addToLoanList" AutomationProperties.AutomationId="addToLoanList"  />
+				<TextBlock x:Name="bindingSourceMaterial" AutomationProperties.AutomationId="bindingSourceMaterial" />
+				<Button Click="SaveLoans" AutomationProperties.AutomationId="SaveLoans"  />
+				<Button Click="Ja" AutomationProperties.AutomationId="Ja"  />
+				<Button Click="OK" AutomationProperties.AutomationId="OK"  />
+			</StackPanel>
+		</Window>
+		<!--<Window x:Class="GTL\GTLGeorgiaTechLibrary"
+		 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		 xmlns:local="clr-namespace:GTLGeorgiaTechLibrary"
+		 mc:Ignorable="d"
+		 Title="GTLGeorgiaTechLibrary" Height="450" Width="800">
+			<StackPanel x:Name="StackRoot">
+
+				-->
+		<!--New Material Add button-->
+		<!--
+				<Button Click="addMaterial" AutomationProperties.AutomationId="addMaterial"  />
+
+				-->
+		<!--All inputs names-->
+		<!--
+				<TextBox x:Name="txtIsbn" AutomationProperties.AutomationId="txtIsbn"/>
+				<TextBox x:Name="txtLanguage" AutomationProperties.AutomationId="txtLanguage"/>
+				<TextBox x:Name="txtMaterialTitle" AutomationProperties.AutomationId="txtMaterialTitle"/>
+				<TextBox x:Name="txtSubject" AutomationProperties.AutomationId="txtSubject"/>
+				<TextBox x:Name="txtDescription" AutomationProperties.AutomationId="txtDescription"/>
+				<TextBox x:Name="txtNoOfCopies" AutomationProperties.AutomationId="txtNoOfCopies"/>
+				<TextBox x:Name="txtMaterialTotal" AutomationProperties.AutomationId="txtMaterialTotal"/>
+				<TextBox x:Name="txtLoanable" AutomationProperties.AutomationId="txtLoanable"/>
+
+
+				-->
+		<!--Save Button-->
+		<!--
+				<Button Click="saveMaterial" AutomationProperties.AutomationId="saveMaterial"  />
+
+			</StackPanel>
+		</Window>-->
+	</runtime>
 </configuration>
