--- a/GTLUnitTest/packages.config
+++ b/GTLUnitTest/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Appium.WebDriver" version="4.3.1" targetFramework="net472" />
   <package id="Autofac" version="6.0.0" targetFramework="net472" />
   <package id="Autofac.Extras.Moq" version="6.0.0" targetFramework="net472" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
+  <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net472" />
   <package id="FlaUI.Core" version="3.2.0" targetFramework="net472" />
   <package id="FlaUI.UIA3" version="3.2.0" targetFramework="net472" />
   <package id="Interop.UIAutomationClient" version="10.18362.0" targetFramework="net472" />
@@ -10,7 +12,10 @@
   <package id="Moq" version="4.16.1" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="NLog" version="4.7.10" targetFramework="net472" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net472" />
   <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net472" />
